# cbz-page-auditor

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cbz_auditor/: __init__.py  audit.py  cli.py
tests/: test_audit.py
